# WireCli

./: .gitignore  Cargo.toml  README.md  app.md  ascii.md  diff.patch  package-lock.json  package.json  wireapp.md  wirecli-oficial-provider.md
.github/workflows/: release-npm.yml
docs/: skills-and-mcp.md
prompts/: security-and-runtime.md  wire-agent.md
scripts/: check-platform-packages.mjs  install-release-binary.js  stage-platform-binary.mjs
src/: acp.rs  agent_tools.rs  approvals.rs  backend.rs  cli.rs  config.rs  context.rs  flash_cache.rs  gateway.rs  guardian.rs  harness.rs  hooks.rs  id.rs  lab.rs  main.rs  mcp.rs  memory.rs  memory_context.rs  model_catalog.rs  models.rs  orchestrator.rs  policy.rs  prompt.rs  providers.rs  responses_agent.rs  safekey.rs  sandbox.rs  session.rs  skills.rs  startup.rs  subagents.rs  tui.rs  verifier.rs  wire_auth.rs  wire_memory.rs
src/agent_tools/: paths.rs
src/commands/: parser.rs
src/sandbox/: metadata.rs  runtime.rs  types.rs
src/tui/: terminal.rs
