[package]
name = "riftcli"
version = "0.1.0"
edition = "2021"
description = "Core CLI scaffold for a local-first agent workflow"
license = "MIT"

[dependencies]
rusqlite = { version = "0.32", features = ["bundled"] }
axum = "0.8"
bytes = "1"
futures-util = "0.3"
http = "1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "http2", "stream", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "net"] }
crossterm = "0.28"
ratatui = "0.29"
pulldown-cmark = "0.13"
