[package]
name = "wirecli"
version = "0.1.1"
edition = "2021"
description = "Wire CLI for a local-first agent workflow"
license-file = "LICENSE"

[dependencies]
rusqlite = { version = "0.32", features = ["bundled"] }
axum = { version = "0.8", features = ["ws"] }
bytes = "1"
futures-util = "0.3"
http = "1"
base64 = "0.22"
crossbeam-channel = "0.5"
getrandom = "0.3"
ring = "0.17"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "http2", "stream", "json", "blocking"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "net", "time", "sync"] }
crossterm = { version = "0.28", features = ["bracketed-paste"] }
ratatui = "0.29"
pulldown-cmark = "0.13"
